# finab

./: .env.example  flake.nix  main.py  pyproject.toml
src/finab/: client.py  main.py  models.py  ynab_client.py
