[project]
name = "finab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "finwise-python>=1.4.0",
    "python-dotenv>=1.2.1",
    "ynab-api>=2.0.2",
]

[project.scripts]
finab = "finab.main:main"

[tool.uv]
package = true
